# server/api/swagger/swagger.yaml
@@ -58,6 +58,27 @@ paths:
           type: string
       responses:
         "200":
+          description: Success
+  /session/{name}/scenario:
+    x-swagger-router-controller: session
+    post:
+      summary: Enable/disable scenarios for this session
+      operationId: enableScenarios
+      tags : [Session]
+      parameters:
+        - name: name
+          in: path
+          description: Name of the session
+          required: true
+          type: string     
+        - name: changes
+          in: body
+          description: lists of scenarios to enable and disable
+          required: true
+          schema:
+            $ref: "#/definitions/SessionScenarioChangeResource"
+      responses:
+        "200":
           description: Success   
   /transaction/{session}:
     x-swagger-router-controller: transaction
@@ -257,3 +278,14 @@ definitions:
         type: string
       code:
         type: string
+  SessionScenarioChangeResource:
+    description: Scenarios to enable and disable on a session
+    properties:
+      enable:
+        type: array
+        items:
+          type: string
+      disable:
+        type: array
+        items:
+          type: string
