# server/models/session-model.js
@@ -4,6 +4,7 @@ let _ = require('lodash');
 let bluebird = require('bluebird');
 let redis = require('redis');
 let client = redis.createClient();
+let scenarioModel = require("./scenario-model");
 
 bluebird.promisifyAll(redis.RedisClient.prototype);
 
@@ -11,7 +12,7 @@ class SessionModel {
 
     static getAll() {
         return client.hvalsAsync('ui-sessions').then((items) => {
-            return _.map(items, o=>{ 
+            return _.map(items, o => {
                 return JSON.parse(o);
             });
         });
@@ -19,12 +20,30 @@ class SessionModel {
 
     static create(sessionName) {
         let newSession = { name: sessionName };
-        return client.rpushAsync('ui-sessions', JSON.stringify(newSession) );
+        return client.rpushAsync('ui-sessions', JSON.stringify(newSession));
     }
 
     static delete(sessionName) {
-        let newSession = { name: sessionName };
-        return client.lremAsync('ui-sessions', 1, JSON.stringify(newSession) );
+        let session = { name: sessionName };
+        return client.lremAsync('ui-sessions', 1, JSON.stringify(session));
+    }
+
+    static enableScenarios(sessionName, enable, disable) {
+        return client.hgetAsync('ui-sessions', sessionName).then((item) => {
+            let session = JSON.parse(item);
+            session.scenarios = session.scenarios || [];
+            _.remove(session.scenarios, o => {
+                return (disable.indexOf(o) > -1) || (enable.indexOf(o) > -1);
+            })
+            session.scenarios = session.scenarios.concat(enable);
+
+            session.scenarios.forEach(scenarioId => {
+                scenarioModel.run(session, scenarioId);
+            }, this);
+
+            return client.hset('ui-sessions', sessionName, JSON.stringify(session));
+        });
+
     }
 }
 
